# py-internetbs

./: setup.cfg
internetbs/: client.py  endpoints.py  exceptions.py  fields.py  schemas.py
